Get rid of Deque, primarily because it is slow
Deque is showing up in many of the stack trace samples.  One of the
Deque usages doesn't need to be thread safe anyways, and the other is
small enough that CopyOnWriteArrayList is much much faster.